--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^9.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "reflect-metadata": "^0.1.13",
